# custom-photobooth

./: .env  .gitignore  .gitmodules  Pipfile  README.md  generate_all_composites.py  main.py  pyproject.toml  requirements.txt
components/: clickable_label.py  countdown_timer.py  decorative_button.py  flash_overlay.py  range_selector.py
config/: load_metadata.py
controllers/: camera_controller.py  image_processor.py  session_manager.py
ui/: __init__.py  base_screen.py  camera_screen.py  layout_select_screen.py  main_window.py  print_screen.py  selection_screen.py  styles.py  title_screen.py
utils/: generate_all_composites.py  generate_preview_strips.py  utils.py
